fixes gradient overflowing content on section overview

--- a/ui/controls/section-root.reel/_section-root.css
+++ b/ui/controls/section-root.reel/_section-root.css
@@ -12,7 +12,7 @@
     max-height: 15em;
     /* margin overrides for inspector spacing */
     margin: -1rem;
-    margin-bottom: 0;
+    margin-bottom: .5rem;
 
     @apply --flex-column;
 
@@ -22,8 +22,9 @@
         bottom: 0;
         left: 0;
         right: 0;
-        height: 1.5rem;
+        height: 1rem;
         background-image: linear-gradient( color(var(--primary--7) a(0%)) , var(--primary--7) 90%);
+        pointer-events: none;
     }
 
     & > :first-child {
